@@ -169,6 +169,23 @@ FILE
   ### GIT ###
   git :add => '-A' if prefer :git, true
   git :commit => '-qm "rails_apps_composer: set up database"' if prefer :git, true
+  ### FRONTEND (must run after database migrations) ###
+  # generate Devise views with appropriate styling
+  if prefer :authentication, 'devise'
+    case prefs[:frontend]
+      when 'bootstrap3'
+        generate 'layout:devise bootstrap3 -f'
+      when 'foundation5'
+        generate 'layout:devise foundation5 -f'
+    end
+  end
+  # create navigation links using the rails_layout gem
+  generate 'layout:navigation -f'
+  # replace with specialized navigation partials
+  copy_from_repo 'app/views/layouts/_navigation-subdomains_app.html.erb', :prefs => 'subdomains_app'
+  ### GIT ###
+  git :add => '-A' if prefer :git, true
+  git :commit => '-qm "rails_apps_composer: navigation links"' if prefer :git, true
 end # after_everything
 
 __END__
